# SagaOfSacrifice2

./: .gitignore  .gitmodules  MULTIPLAYER.md  README.md  convert.py  docker-compose.yml  idcheck.py  launch.json  levelmaker.py  test.py
DMAControl/: SagaOfSacrifice2.code-workspace  audio.c  audio.cpp  axi_bram_controller.c  axi_bram_filler2.c  axi_bram_filler3.c  axi_bram_filler4.c  axi_bram_filler5.c  main.c  main.cpp  test.cpp  test_BRAM.c  test_irq.c  test_irq2.c  test_irq3.c
SOS/: .main.cpp.un~  CMakeLists.txt  main  main.cpp  main.cpp~  mermaid.mmd  mermaid_core.mmd
SOS/assets/: server.json
SOS/assets/levels/: level.json
SOS/assets/spriteatlas/: Aegis_The_Destoryer_Of_Worlds.tpsheet  Grasstileset.tpsheet  Props.tpsheet  StoneWall.tpsheet  Stonetileset.tpsheet  Tilemap_Elevation.psheet  Tilemap_Elevation.tpsheet  Tilemap_Flat.tpsheet  Tower_animations.tpsheet  Wall.tpsheet  background.tpsheet  background2.tpsheet  bridges.tpsheet  chest_animation.tpsheet  crack_animation.tpsheet  cracks_floor.tpsheet  cracks_floortpsheet  fire_animation.tpsheet  fire_animation2.tpsheet  letters.tpsheet  letters_small.tpsheet  minotaurus_idle.tpsheet  minotaurus_slash.tpsheet  minotaurus_walk.tpsheet  necromancer_attack.tpsheet  necromancer_attackB.tpsheet  necromancer_death.tpsheet  necromancer_idle.tpsheet  necromancer_idleB.tpsheet  necromancer_moving.tpsheet  objects_pack0.tpsheet  objects_pack1.tpsheet  objects_pack2.tpsheet  objects_pack3.tpsheet  objects_pack4.tpsheet  objects_pack5.tpsheet  objects_pack6.tpsheet  objects_pack7.tpsheet  objects_pack8.tpsheet  orc1_attack.tpsheet  (+53 more)
SOS/assets/spriteatlasNotUsed/: Golem_Laser.tpsheet  Golem_animations.tpsheet  Stonetileset.tpsheet  chest_animation.tpsheet  healthbar.tpsheet  letters.tpsheet  minotaurus_walk.tpsheet  necromancer_attackB.tpsheet  objects_pack1.tpsheet  objects_pack4.tpsheet  objects_pack7.tpsheet  orc1_attack.tpsheet  orc1_idle.tpsheet  orc1_run_attack.tpsheet  orc3_attack.tpsheet  orc3_death.tpsheet  orc3_run.tpsheet  orc3_walk_attack.tpsheet  slime2_death.tpsheet  slime3_attack.tpsheet  slime3_hurt.tpsheet  slime3_run.tpsheet  slime_run.tpsheet  slime_walk.tpsheet  water_coast.tpsheet  wolfman_slash.tpsheet
SOS/assets/spriteatlasTest/: Golem_projectile.tpsheet  aegis1.tpsheet  crack_animation.tpsheet  letter.tpsheet  necromancer_death.tpsheet  objects_pack3.tpsheet  orc1_hurt.tpsheet  slime2_hurt.tpsheet  slime_attack.tpsheet  testimg.tpsheet
SOS/assets/spriteatlastest/: testimg.tpsheet
SOS/cmake/: FindSDL2_mixer.cmake
SOS/include/: LevelData_level1.h  LocalServerManager.h  Object.h  ServerConfig.h  Vec2.h  animation.h  characters.h  engine.h  game.h  level.h  level_manager.h  object.h  player_manager.h  sprite_data.h
SOS/include/collision/: CollisionHandler.h  CollisionInfo.h  CollisionManager.h  CollisionVisitor.h
SOS/include/factories/: player_factory.h
SOS/include/graphics/: Camera.h  RenderGrid.h  RenderManager.h
SOS/include/interfaces/: AudioManager.h  gfx.h  input.h  playerInput.h  sprite_data.h
SOS/include/network/: AsioNetworkClient.h  DeltaState.h  EmbeddedServer.h  MultiplayerManager.h  NetworkConfig.h  NetworkInterface.h  NetworkMessage.h
SOS/include/objects/: Enemy.h  enemy.h  entity.h  minotaur.h  platform.h  player.h  tile.h
SOS/include/petalinux/: .Renderer.h.un~  Renderer.h  SDL2AudioManager.h  input_pl.h
SOS/include/petalinux/fpga/: spriteloader.h
SOS/include/utils/: TimeUtils.h
SOS/src/: LocalServerManager.cpp  Object.cpp  ServerConfig.cpp  animation.cpp  controller  dualsense.cpp  engine.cpp  game.cpp  input_pl.cpp  level.cpp  level_manager.cpp  player_manager.cpp  sprite_data.cpp
SOS/src/collision/: CollisionHandler.cpp  CollisionManager.cpp
SOS/src/graphics/: Camera.cpp
SOS/src/interfaces/: AudioManager.cpp
SOS/src/logging/: logger.cpp
SOS/src/network/: AsioNetworkClient.cpp  DeltaState.cpp  EmbeddedServer.cpp  EmbeddedServerMethods.cpp  MultiplayerManager.cpp
SOS/src/objects/: enemy.cpp  entity.cpp  minotaur.cpp  platform.cpp  player.cpp  tile.cpp
SOS/src/petalinux/: .Renderer.cpp.un~  Renderer.cpp  Renderer.cpp~  SDL2AudioManager.cpp  input_pl.cpp
SOS/src/petalinux/fpga/: dma.cpp  spriteloader.cpp
SOS/src/utils/: TimeUtils.cpp
SOS1/src/: Bullet.cpp  Enemy.cpp  Enemy.h  Fatbat.cpp  fakemain.cpp  game.cpp  game.h  gfx.h  globals.h  logger.h  player.cpp  player.h  samurai.cpp  samurai.h  sdl_gfx.cpp  sdl_gfx.h  sprites.cpp  sprites.h
client/: CMakeLists.txt  copy.txt  main.cpp  mermaid.mmd  mermaid_collision.mmd  mermaid_multiplayer.mmd  mermaid_objects.mmd
client/include/: Renderer.h  SDL2AudioManager.h  SDL2Input.h  input_pl.h
client/include/fpga/: dma.h  spriteloader.h
client/src/: Renderer.cpp  SDL2AudioManager.cpp  SDL2Input.cpp  input_pl.cpp
client/src/fpga/: dma.cpp  spriteloader.cpp
docs/: ARCHITECTURE_OVERVIEW.md  SYSTEM_OVERVIEW.md  SagaOfSacrifice2 - Architecture Overview.mmd  architecture_overview.mmd  collision_handling.mmd  multiplayer_communication.mmd
server/: CMakeLists.txt  Dockerfile  main.cpp
server/include/: GameServer.h  GameSession.h  NetworkMessage.h
server/src/: GameServer.cpp  GameSession.cpp
wrapper/: CMakeLists.txt  README.md
wrapper/config/: macos.sh
wrapper/src/: SDL2AudioManager.cpp  logger_sdl.cpp  logger_sdl.h  main.cpp  sdl_gfx.cpp  sprites_sdl.h  (+1 more)
wrapper_client/: .gitignore  CMakeLists.txt  README.md
wrapper_client/SOS/assets/spriteatlas/: chest_animation.tpsheet  crack_animation.tpsheet  necromancer_attack.tpsheet  objects_pack4.tpsheet  orc1_idle.tpsheet  orc1_run_attack.tpsheet  orc1_walk.tpsheet  orc2_death.tpsheet  orc2_hurt.tpsheet  orc2_idle.tpsheet  orc3_attack.tpsheet  orc3_death.tpsheet  orc3_idle.tpsheet  orc3_run.tpsheet  orc3_walk.tpsheet  player_walking.psheet  slime2_attack.tpsheet  slime2_death.tpsheet  slime2_hurt.tpsheet  slime2_run.tpsheet  slime3_walk.tpsheet  slime_idle.tpsheet  water_coast.tpsheet
wrapper_client/include/: SDL3AudioManager.h
wrapper_client/src/: SDL3AudioManager.cpp  SDL3AudioManager.h  main.cpp
wrapper_client/src/game_overrides/: sdl_input.cpp
(+6 files in other folders)
